# ChangeLog for dev-ruby/sass-rails
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/sass-rails/ChangeLog,v 1.23 2014/12/30 06:52:17 graaff Exp $

*sass-rails-5.0.1 (30 Dec 2014)

  30 Dec 2014; Hans de Graaff <graaff@gentoo.org> +sass-rails-5.0.1.ebuild:
  Version bump.

*sass-rails-5.0.0 (22 Dec 2014)

  22 Dec 2014; Hans de Graaff <graaff@gentoo.org> +sass-rails-5.0.0.ebuild:
  Version bump.

*sass-rails-4.0.5 (30 Nov 2014)

  30 Nov 2014; Hans de Graaff <graaff@gentoo.org> +sass-rails-4.0.5.ebuild:
  Version bump.

*sass-rails-4.0.4 (30 Oct 2014)

  30 Oct 2014; Hans de Graaff <graaff@gentoo.org> +sass-rails-4.0.4.ebuild:
  Version bump.

  30 Oct 2014; Hans de Graaff <graaff@gentoo.org> -sass-rails-3.2.5.ebuild,
  -sass-rails-4.0.0.ebuild, -sass-rails-4.0.1.ebuild:
  Cleanup.

  26 Jun 2014; Hans de Graaff <graaff@gentoo.org> sass-rails-3.2.6.ebuild:
  Add ruby20.

*sass-rails-4.0.3 (26 Apr 2014)

  26 Apr 2014; Hans de Graaff <graaff@gentoo.org> +sass-rails-4.0.3.ebuild:
  Version bump.

  24 Apr 2014; Manuel Rüger <mrueg@gentoo.org> sass-rails-3.2.5.ebuild,
  sass-rails-3.2.6.ebuild:
  Remove ruby18 support. EAPI bump.

  21 Apr 2014; Hans de Graaff <graaff@gentoo.org> sass-rails-4.0.1.ebuild:
  Add ruby20, ruby21.

  11 Mar 2014; Johannes Huber <johu@gentoo.org> sass-rails-4.0.0.ebuild,
  sass-rails-4.0.1.ebuild:
  ~x86 added, bug #487206

  11 Mar 2014; Manuel Rüger <mrueg@gentoo.org> sass-rails-3.2.5.ebuild,
  sass-rails-3.2.6.ebuild:
  Remove ree18.

  29 Nov 2013; Hans de Graaff <graaff@gentoo.org> -sass-rails-3.1.5.ebuild:
  Remove masked Rails 3.1.

*sass-rails-4.0.1 (16 Oct 2013)

  16 Oct 2013; Hans de Graaff <graaff@gentoo.org> +sass-rails-4.0.1.ebuild:
  Version bump.

  13 Oct 2013; Markus Meier <maekke@gentoo.org> sass-rails-4.0.0.ebuild:
  add ~arm, bug #487206

*sass-rails-4.0.0 (07 Oct 2013)

  07 Oct 2013; Hans de Graaff <graaff@gentoo.org> +sass-rails-4.0.0.ebuild: