@@ -1,15 +1,0 @@
-DEFINED_PHASES=compile configure install prepare setup test unpack
-DEPEND=test? ( ruby_targets_ruby19? ( >=dev-ruby/sass-3.1[ruby_targets_ruby19] =dev-ruby/sass-3*[ruby_targets_ruby19] =dev-ruby/railties-4*[ruby_targets_ruby19] >=dev-ruby/sprockets-rails-2.0[ruby_targets_ruby19] <dev-ruby/sprockets-rails-4[ruby_targets_ruby19] >=dev-ruby/sprockets-2.8[ruby_targets_ruby19] <dev-ruby/sprockets-4[ruby_targets_ruby19] >=dev-ruby/tilt-1.1[ruby_targets_ruby19] =dev-ruby/tilt-1*[ruby_targets_ruby19] ) ruby_targets_ruby20? ( >=dev-ruby/sass-3.1[ruby_targets_ruby20] =dev-ruby/sass-3*[ruby_targets_ruby20] =dev-ruby/railties-4*[ruby_targets_ruby20] >=dev-ruby/sprockets-rails-2.0[ruby_targets_ruby20] <dev-ruby/sprockets-rails-4[ruby_targets_ruby20] >=dev-ruby/sprockets-2.8[ruby_targets_ruby20] <dev-ruby/sprockets-4[ruby_targets_ruby20] >=dev-ruby/tilt-1.1[ruby_targets_ruby20] =dev-ruby/tilt-1*[ruby_targets_ruby20] ) ruby_targets_ruby21? ( >=dev-ruby/sass-3.1[ruby_targets_ruby21] =dev-ruby/sass-3*[ruby_targets_ruby21] =dev-ruby/railties-4*[ruby_targets_ruby21] >=dev-ruby/sprockets-rails-2.0[ruby_targets_ruby21] <dev-ruby/sprockets-rails-4[ruby_targets_ruby21] >=dev-ruby/sprockets-2.8[ruby_targets_ruby21] <dev-ruby/sprockets-4[ruby_targets_ruby21] >=dev-ruby/tilt-1.1[ruby_targets_ruby21] =dev-ruby/tilt-1*[ruby_targets_ruby21] ) ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby21? ( dev-lang/ruby:2.1 ) ruby_targets_ruby19? ( test? ( dev-ruby/rake[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( test? ( dev-ruby/rake[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( test? ( dev-ruby/rake[ruby_targets_ruby21] ) ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) test? ( ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) )
-DESCRIPTION=Official Ruby-on-Rails Integration with Sass
-EAPI=5
-HOMEPAGE=https://github.com/rails/sass-rails
-IUSE=test elibc_FreeBSD ruby_targets_ruby19 ruby_targets_ruby20 ruby_targets_ruby21 test test
-KEYWORDS=~amd64 ~arm ~x86
-LICENSE=MIT
-RDEPEND=ruby_targets_ruby19? ( >=dev-ruby/sass-3.1[ruby_targets_ruby19] =dev-ruby/sass-3*[ruby_targets_ruby19] =dev-ruby/railties-4*[ruby_targets_ruby19] >=dev-ruby/sprockets-rails-2.0[ruby_targets_ruby19] <dev-ruby/sprockets-rails-4[ruby_targets_ruby19] >=dev-ruby/sprockets-2.8[ruby_targets_ruby19] <dev-ruby/sprockets-4[ruby_targets_ruby19] >=dev-ruby/tilt-1.1[ruby_targets_ruby19] =dev-ruby/tilt-1*[ruby_targets_ruby19] ) ruby_targets_ruby20? ( >=dev-ruby/sass-3.1[ruby_targets_ruby20] =dev-ruby/sass-3*[ruby_targets_ruby20] =dev-ruby/railties-4*[ruby_targets_ruby20] >=dev-ruby/sprockets-rails-2.0[ruby_targets_ruby20] <dev-ruby/sprockets-rails-4[ruby_targets_ruby20] >=dev-ruby/sprockets-2.8[ruby_targets_ruby20] <dev-ruby/sprockets-4[ruby_targets_ruby20] >=dev-ruby/tilt-1.1[ruby_targets_ruby20] =dev-ruby/tilt-1*[ruby_targets_ruby20] ) ruby_targets_ruby21? ( >=dev-ruby/sass-3.1[ruby_targets_ruby21] =dev-ruby/sass-3*[ruby_targets_ruby21] =dev-ruby/railties-4*[ruby_targets_ruby21] >=dev-ruby/sprockets-rails-2.0[ruby_targets_ruby21] <dev-ruby/sprockets-rails-4[ruby_targets_ruby21] >=dev-ruby/sprockets-2.8[ruby_targets_ruby21] <dev-ruby/sprockets-4[ruby_targets_ruby21] >=dev-ruby/tilt-1.1[ruby_targets_ruby21] =dev-ruby/tilt-1*[ruby_targets_ruby21] ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby21? ( dev-lang/ruby:2.1 ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] )
-REQUIRED_USE=|| ( ruby_targets_ruby19 ruby_targets_ruby20 ruby_targets_ruby21 )
-RESTRICT=test
-SLOT=5.0
-SRC_URI=mirror://rubygems/sass-rails-5.0.0.gem
-_eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	java-utils-2	f02d3e4777b404c719a5a6479c37c6e3	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	ruby-fakegem	d4f8591e9b20b106327e9d143eb13da5	ruby-ng	c79a9fd7644eefe8009be02a82648e1f	toolchain-funcs	79b635d29abf0572d6a1b0dc8e63c0e4	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=7e356b2685e4c99840a44a36927b438a
