@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/sass-rails
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/sass-rails/ChangeLog,v 1.23 2014/12/30 06:52:17 graaff Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/sass-rails/ChangeLog,v 1.24 2015/03/31 05:57:08 graaff Exp $
+
+  31 Mar 2015; Hans de Graaff <graaff@gentoo.org> -sass-rails-4.0.3.ebuild,
+  -sass-rails-4.0.4.ebuild, -sass-rails-5.0.0.ebuild:
+  Cleanup.
 
 *sass-rails-5.0.1 (30 Dec 2014)
 
